# ROS_precise_pushing

./: .gitignore  README.md  setup.py
catkin_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/include/precise_pushing_bridge/: Step.h  StepRequest.h  StepResponse.h
catkin_ws/src/precise_pushing_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/precise_pushing_bridge/launch/: sim_bridge.launch
catkin_ws/src/precise_pushing_bridge/scripts/: gym_server.py  policy_runner.py
panda_push/: CMakeLists.txt  package.xml
panda_push_control/: CMakeLists.txt  package.xml  panda_push_control_plugin.xml
panda_push_control/cfg/: Controller.cfg
panda_push_control/include/panda_push_control/: joint_velocity_push_controller.h
panda_push_control/src/: joint_velocity_push_controller.cpp
panda_push_data/data/bak/: images_imgHeight_64_imgWidth_64_fixedObjectHeight_None_simConfig_1.npy
panda_push_mujoco/: CMakeLists.txt  package.xml
panda_push_mujoco/autoencoder/: generate_images.py  train_VAE.py
panda_push_mujoco/gym_panda_push/: __init__.py
panda_push_mujoco/gym_panda_push/envs/: base_push_env.py
panda_push_mujoco/gym_panda_push/envs/mujoco/: panda_push_base_env.py  panda_push_env.py  panda_push_simple_env.py
panda_push_mujoco/utils/: mujoco_utils.py
panda_push_rl_sb3/: __init__.py  evaluate_policy.py  train.py  utils.py
panda_push_sim2real/: CMakeLists.txt  __init__.py  package.xml
panda_push_sim2real/eval/: evaluate_policy.py
panda_push_sim2real/launch/: collision_monitor.launch  panda_push.launch  panda_push_with_marker.launch
(+41 files in other folders)
